# UDIMTextureImporter

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  LICENSE  README.md  displacementImporter.cpp  displacementImporter.hpp  displacementImporter.lib  displacementImporter.txt  version.txt
DisplacementImporterData/: CMakeLists.txt  DisplacementImporter_2022.txt
DisplacementImporterData/src/: displacementImporter.cpp  goz.cpp  goz.hpp  image.cpp  image.hpp  main.cpp  timer.cpp  udimTextureImporter.cpp  udimTextureImporter.hpp
UDIMTextureImporterData/: DisplacementImporter_2022.txt  UDIMTextureImporter_2022.txt
UDIMTextureImporterData/src/: goz.cpp  goz.hpp  image.cpp  image.hpp  logger.cpp  logger.hpp  timer.cpp  timer.hpp  udimTextureImporter.cpp  udimTextureImporter.hpp  util.cpp  util.hpp
src/: displacementImporter.cpp
