cmake_minimum_required(VERSION 3.13)
project(displacementImporter)

set(SOURCE_FILES
    src/displacementImporter.cpp
)
set(CMAKE_CXX_STANDARD 17)

if (WIN32)
    if (MSVC_VERSION GREATER_EQUAL "1900")
        include(CheckCXXCompilerFlag)
        CHECK_CXX_COMPILER_FLAG("/std:c++latest" _cpp_latest_flag_supported)
        if (_cpp_latest_flag_supported)
            add_compile_options("/std:c++latest")
        endif()
    endif()
    set(PLUGIN_SUFFIX ".dll")
else()
    # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -fvisibility=hidden")
    set(CMAKE_CXX_FLAGS_DEBUG "-g")
    set(CMAKE_CXX_FLAGS_RELEASE "-O3")
    set(PLUGIN_SUFFIX ".lib")
    set(CMAKE_SHARED_LINKER_FLAGS "-dynamiclib, -current_version 1.0")
    set(CMAKE_MACOSX_RPATH 1)
endif()

set(INSTALL_DIR "../DisplacementImporterData")
add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES})
set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "" SUFFIX ${PLUGIN_SUFFIX})
